# personal-discord-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/personal-discord-bot/: __init__.py  __main__.py  basecog.py  bot.py  config.py  config.yaml  huggingface.py  logger.py  monitor.py  movie.py  music.py  poll.py  reactionroles.py  tally.py
src/personal_discord_bot/: __main__.py  bot.py  logger.py  monitor.py  movie.py  music.py  mycog.py  reactionroles.py  tally.py
tests/: test_init.py
